backend/k8s/media-storage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: storage
  labels:
    stage: namespace
