backend/k8s/media-storage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: storage
  labels:
    stage: app
spec:
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
